prepared for deploy

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "basic-youtube",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kowalus23.github.io/basic-youtube",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
@@ -12,7 +13,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
